# libCEED

./: .gitignore  CMakeLists.txt
backends/cuda/: ceed-cuda-compile.cpp
backends/cuda-gen/: ceed-cuda-gen-operator-build.cpp  ceed-cuda-gen-operator.c
examples/: CMakeLists.txt
examples/ceed/: CMakeLists.txt
include/: ceed-impl.h
include/ceed/: types.h
include/ceed/jit-source/cuda/: cuda-gen-templates.h  cuda-shared-basis-tensor-templates.h
interface/: ceed-jit-source-root-default.c  ceed.c
